--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,11 +1,16 @@
 {
 	"name": "C# (.NET)",
 	"image": "mcr.microsoft.com/devcontainers/dotnet:8.0",
+	"runArgs": [
+		"--network",
+		"deo-network"
+	],
 	"postCreateCommand": "dotnet restore --locked-mode && dotnet dev-certs https", // wird einmalig ausgeführt beim Start; dependencies installieren und damit Frontend/Backend unter https erreichbar sind
 	"customizations": {
 		"vscode": {
 			"extensions": [
-				"ms-dotnettools.csdevkit"
+				"ms-dotnettools.csdevkit",
+				"SonarSource.sonarlint-vscode"
 			]
 		}
 	}
