--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -14,7 +14,7 @@ env:
 
 jobs:
   build-and-push-backend-image:
-    runs-on: ubuntu:latest
+    runs-on: ubuntu-22.04
     permissions:
       contents: read
       packages: write
@@ -42,7 +42,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
 
   build-and-push-frontend-image:
-    runs-on: ubuntu:latest
+    runs-on: ubuntu-22.04
     permissions:
       contents: read
       packages: write
