--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -14,7 +14,7 @@ env:
 
 jobs:
   build-and-push-backend-image:
-    runs-on: ubuntu:latest
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
@@ -23,7 +23,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Log in to container registry
         uses: docker/login-action@v3
-        with:
+        with: 
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
@@ -42,7 +42,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
 
   build-and-push-frontend-image:
-    runs-on: ubuntu:latest
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
