--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -1,6 +1,6 @@
-name: Packaging Pipeline
+name: Package Pipeline
 
-run-name: Run triggered by ${{ github.actor }} 😎
+run-name: Packaging triggerd by ${{ github.actor }} 📦
 
 on:
   push:
@@ -23,20 +23,20 @@ jobs:
         uses: actions/checkout@v4
       - name: Log in to container registry
         uses: docker/login-action@v3
-        with: 
+        with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Extract medadata
+      - name: Extract metadata
         id: meta
-        uses: docker/medatata-actions@v5
+        uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.BACKEND_IMAGE_NAME }}
       - name: Build and push image
         id: push
         uses: docker/build-push-action@v6
         with:
-          context: ./Deo.Backend # cd Deo.Backend && docker build <> .
+          context: ./Deo.Backend
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
@@ -55,9 +55,9 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Extract medadata
+      - name: Extract metadata
         id: meta
-        uses: docker/medatata-actions@v5
+        uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.FRONTEND_IMAGE_NAME }}
       - name: Build and push image
